misc cleanup, fixed width of links to not stretch entire page

--- a/sanjaya_css.css
+++ b/sanjaya_css.css
@@ -1,4 +1,3 @@
-/*CSS file for portfolio- ssatyal.github.io */
 h1 {
   text-align: center;
   color: black;
@@ -8,6 +7,13 @@ body {
   background-color: white;
   color: black;
   font-family: "Calibri";
+}
+
+.me {
+  width: 20%;
+  margin: auto;
+  display: block;
+  border: 5px solid black;
 }
 
 .imgbg {
@@ -20,27 +26,6 @@ h2 {
   padding-left: 100px;
   font-family: Arial;
   color: #3EA055;
-}
-
-h3 {
-  text-align: center;
-  padding-top: 20px;
-  font-family: Arial;
-  color: #3EA055;
-}
-
-a {
-  text-align: center;
-  display: block;
-  color: black;
-  line-height: 1.7;
-  margin: 0 auto;
-}
-
-.footlinks {
-  color: black;
-  text-align: center;
-  margin: 0 auto;
 }
 
 p {
@@ -57,10 +42,18 @@ p {
   font-family: Arial;
 }
 
-.me {
-  width: 20%;
-  margin-left: auto;
-  margin-right: auto;
+h3 {
+  text-align: center;
+  padding-top: 20px;
+  font-family: Arial;
+  color: #3EA055;
+}
+
+a {
+  text-align: center;
   display: block;
-  border: 5px solid black;
+  color: black;
+  line-height: 1.7;
+  margin: 0 auto;
+  width: 100px;
 }
